[package]
name = "sekirbo"
version = "0.1.0"
authors = ["Ray Chen <rayruichen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cargo-emit = "0.1.1"

[dependencies]
vulkano = "0.19"
vulkano-shaders = "0.18"
image = "0.23"
vulkano-win = "0.19"
winit = "0.22"
typed-arena = "2.0.1"